# TenniS

./: .gitignore  .gitlab-ci.yml  CMakeLists-ubuntu-x86-to-arm64-cross-compile.txt  CMakeLists.txt  README.md
android/jni/: Android.mk  Application.mk  build.cmd
cmake/: FLAGS_GCC.cmake  FLAGS_MSVC.cmake  FindTenniS.cmake  FindTensorStack.cmake  Info.plist.in  LOCAL_ENV.cmake  strip.cmake  tools.cmake  use_cblas.cmake  use_cuda.cmake  use_openmp.cmake  use_rknn.cmake  use_xnnpack.cmake
craft/: build.linux.aarch64.sh  build.win.vc14.x64.cmd  build.win.vc14.x64.debug.cmd  build.win.vc14.x64_gpu.cmd  build.win.vc14.x86.cmd  build.win.vc14.x86.debug.cmd  build.win.vc14.x86_gpu.cmd
doc/zh_CN/: meta.md  module.md  operator.md  operators.md  test_case.md  tf_operator.md
include/api/: api.h  common.h  device.h  image_filter.h  intime.h  module.h  operator.h  operator_gpu.h  program.h  setup.h  stream.h  tennis.h  tensor.h  tensorstack.h  workbench.h
include/api/cpp/: device.h  dtype.h  except.h  graphics2d.h  image_filter.h  intime.h  module.h  operator.h  operator_gpu.h  program.h  stream.h  tensor.h  tensorstack.h  workbench.h
include/backend/: common_function.h  common_structure.h  name.h
include/backend/base/: base_activation.h  base_add_bias.h  base_affine_sample2d.h  base_cast_v2.h  (+36 more)
include/board/: board.h  hook.h  profiler.h  time_log.h
include/compiler/: argparse.h  compiler.h  converter.h  translater.h  zipper.h
include/core/: controller.h  device.h  device_context.h  dtype.h  hard_memory.h  ieee754_float.h  memory.h  scan.h  sink.h  tensor.h  tensor_builder.h  tensor_converter.h  tensor_iterator.h  type.h
include/encryption/: encrypted_fstream.h
include/engine/: context.h
include/frontend/: compressor.h  desc.h  frontend.h  intime.h  symbol.h  zoo.h
include/global/: allocator.h  converter.h  device.h  device_admin.h  device_initializer.h  fp16_operator_factory.h  hard_allocator.h  hard_converter.h  memory_device.h  module_loader_factory.h  operator_factory.h  register.h  setup.h  shape_inferer_factory.h
include/mem/: controller.h  hard_memory.h  memory.h
include/memory/: flow.h
include/module/: bubble.h  graph.h  header.h  menu.h  module.h  modulev2.h  node.h  serialization.h
include/runtime/: image_filter.h  importor.h  inferer.h  instruction.h  operator.h  program.h  runtime.h  stack.h  switcher.h  workbench.h
include/stack/: function.h  instruction.h  operator.h  stack.h  workbench.h
include/tensor/: iteration_descriptor.h  itrator.h  tensor.h  type.h
include/utils/: api.h  assert.h  box.h  cpu.h  cpu_info.h  ctxmgr.h  ctxmgr_lite.h  ctxmgr_lite_support.h  env_vars.h  except.h  implement.h  log.h  mutex.h  need.h  otl.h  platform.h  random.h  static.h  void_bind.h
ios/: cmake.sh
python/: README.md  test.py
python/garden/: README.md
python/quantize/: quantize.py  quantize_translator_option.py  translator.py  ts_int8_convert_tool.py
python/stackbuilder/: __init__.py
python/tensorstack/: __init__.py  binio.py  device.py  dtype.py  graph.py  header.py  inferer.py  menu.py  module.py  node.py  prototype.py  tensor.py  zoo.py
python/test/: backend.py  convert_caffe.py  convert_darknet.py  convert_holiday.py  convert_mxnet.py  convert_onnx.py  convert_tf.py  convert_torch.py  convert_vvvv.py  inferer.py  module.py  tensor.py  viewsta.py
script/cmake/: android-arm64-v8a.sh  android-armeabi-v7a.sh  android-x86.sh  android-x86_64.sh  ios-arm64.sh  ios-armv7.sh  ios-x86_64.sh  linux-ix86.sh  mac-arm64.sh  windows-mingw.ps1  windows-vs2019.ps1
script/framework/: pack.py
script/pwsh/: fusion.ps1  fusion_v2.ps1  permission.ps1  setup_vcvars.ps1  vcvars_vs2013.bat  vcvars_vs2013.ps1  vcvars_vs2015.bat  vcvars_vs2015.ps1  vcvars_vs2017.ps1  vcvars_vs2019.ps1
src/api/: api.cpp  common.cpp  declaration.h  declare_image_filter.h  declare_module.h  declare_operator.h  declare_program.h  declare_tensor.h  declare_workbench.h  errno.h  image_filter.cpp  intime.cpp  module.cpp  operator.cpp  operator_gpu.cpp  plugin.cpp  plugin.h  program.cpp  tensor.cpp  tensorstack.cpp  workbench.cpp
src/backend/: name.cpp
src/board/: dump.cpp  profiler.cpp
src/compiler/: argparse.cpp  compiler.cpp  translater.cpp  zipper.cpp
src/core/: controller.cpp  device.cpp  device_context.cpp  dtype.cpp  hard_memory.cpp  memory.cpp  scan.cpp  sink.cpp  tensor.cpp  tensor_builder.cpp  tensor_converter.cpp  type.cpp
src/encryption/: aes_fstream.cpp
src/engine/: context.cpp
src/frontend/: compressor.cpp  desc.cpp  frontend.cpp  intime.cpp  symbol.cpp  zoo.cpp
src/global/: allocator.cpp  converter.cpp  device.cpp  device_admin.cpp  device_initializer.cpp  fp16_operator_factory.cpp  hard_allocator.cpp  hard_converter.cpp  memory_device.cpp  module_loader_factory.cpp  operator_factory.cpp  register.cpp  setup.cpp  shape_inferer_factory.cpp
src/mem/: controller.cpp  hard_memory.cpp  memory.cpp
src/memory/: flow.cpp
src/module/: bubble.cpp  graph.cpp  menu.cpp  module.cpp  modulev2.cpp
src/runtime/: image_filter.cpp  importor.cpp  inferer.cpp  instruction.cpp  operator.cpp  program.cpp  runtime.cpp  stack.cpp  switcher.cpp  workbench.cpp
src/stack/: function.cpp  instruction.cpp  stack.cpp  workbench.cpp
src/tensor/: iteration_descriptor.cpp  itrator.cpp  scan.cpp  tensor.cpp  type.cpp
src/utils/: box.cpp  cpu.cpp  cpu_info.cpp  ctxmgr.cpp  ctxmgr_lite.cpp  env_vars.cpp  except.cpp  log.cpp  random.cpp
test/: api.cpp  board.cpp  checking.cpp  compilation.cpp  customop.cpp  darknet.cpp  graph.cpp  inferer.cpp  kernel_cpu.cpp  mem.cpp  module.cpp  mutex.cpp  openmp.cpp  operator.cpp  parallel.cpp  serialization.cpp  sink.cpp  smoke.cpp  stack.cpp  subgraph.cpp  summary.cpp  sync_controller.cpp  tensor.cpp  tensor_converter.cpp  threadsafe.cpp  winograd.cpp  yolo26.cpp  yolov4.cpp
toolchain/: MinGW-i686.cmake  MinGW-x86_64.cmake  MinGW.cmake  aarch64-linux-gnu.cmake  arm-linux-gnueabi.cmake  arm-linux-gnueabihf.cmake  iOS.cmake
tools/: benchmark.cpp  draw_net.cpp  run_test.cpp
tools/benchmark/: benchmark.h
tools/run_test/: test_case.hpp
(+660 files in other folders)
